--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -34,6 +34,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "resetMocks": false,
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/"
     ]
   }
 }
