--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "jest --watchAll",
+    "test": "jest --env=jsdom",
     "test:coverage": "jest --coverage"
   },
   "repository": {
@@ -28,17 +28,53 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.2",
-    "@mui/styled-engine-sc": "^5.4.2",
     "@mui/styles": "^5.4.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
     "concurrently": "^7.0.0",
     "d3": "^7.3.0",
     "hapi": "^18.1.0",
     "http-proxy-middleware": "^2.0.3",
-    "material-ui-search-bar": "^1.0.0",
+    "node-fetch": "^3.2.0",
     "nodemon": "^2.0.15",
-    "react-router-dom": "^6.2.1",
-    "styled-components": "^5.3.3",
+    "regenerator-runtime": "^0.13.9",
     "yarn": "^1.22.17"
+  },
+  "peerDependencies": {
+    "react": "17.0.0",
+    "react-dom": "17.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.3",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^12.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "jest": "^27.5.1",
+    "react-router-dom": "^6.2.1"
+  },
+  "jest": {
+    "resetMocks": false,
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!@node-fetch)/",
+      "node_modules/(?!@react-router-dom)/"
+    ],
+    "setupFilesAfterEnv": [
+      "./setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
