--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,8 +1,11 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
-    ["transform-runtime", {
-      "regenerator": true
+  "presets": [
+    "@babel/preset-react",
+    ["@babel/preset-env", {
+      "useBuiltIns": false
     }]
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
   ]
 }
