--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,15 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,13 +37,16 @@
     ]
   },
   "jest": {
-    "resetMocks": false,
     "transform": {
       "^.+\\.jsx?$": "babel-jest",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/fileTransformer.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "../fileTransformer.js"
     },
     "transformIgnorePatterns": [
       "node_modules/"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy",
+      "^react$": "<rootDir>/node_modules/react/index.js"
+    }
   }
 }
